# octdata4python

./: .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  __init__.py  docker-compose.yaml  mypy.ini  octdata4python.cpp  pyproject.toml  user-config.jam
.github/workflows/: build.yml  linux.yml  release.yml  windows.yml
scripts/: uv-install-pythons.sh
