[project]
name = "octdata4python"
version = "0.1.0"
dependencies = [
    "build",
    "numpy<=1.26.0"
]

[project.optional-dependencies]
linux = ["auditwheel"]
windows = ["delvewheel"]

[tool.scikit-build]
sdist.exclude = [".venv/*"]
wheel.packages = ["octdata4python"]

[build-system]
requires = ["scikit-build-core>=0.11.3"]
build-backend = "scikit_build_core.build"
