[project]
name = "octdata4python"
requires-python = ">=3.9"
version = "0.1.0"
dependencies = [
    "numpy<=1.26.0"
]

[dependency-groups]
dev = [
  "build",
  "auditwheel; sys_platform == 'linux'",
  "delvewheel; sys_platform == 'win32'"
]

[tool.scikit-build]
sdist.exclude = [".venv/*"]
wheel.packages = ["octdata4python"]

[build-system]
requires = ["scikit-build-core>=0.11.3"]
build-backend = "scikit_build_core.build"
